Fix layout of collapsable menu for homepage
Removed the gap property from the "navigation" class. Also moved
"margin: 0 1rem" to ".navigation > li". Included animation to change the
hamburger menu into an "X" while displaying the collapsable menu. Made
other minor adjustments to the navigation menu.

--- a/webpages/CSS_Files/index.css
+++ b/webpages/CSS_Files/index.css
@@ -1,10 +1,3 @@
-/*
-
-https://alvarotrigo.com/blog/hamburger-menu-css/
-
-https://codepen.io/alvarotrigo/pen/MWEJEWG
-
-*/
 
 * {
     box-sizing: border-box;
@@ -27,26 +20,30 @@ body {
     
 }
 
-ul {
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
-}
-
 nav {
+    margin: 3vmin auto;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
-    margin: 3vmin auto;
+    align-self: center;
     width: 93vw;
     height: 7vh;
     background-color: orange;
     box-shadow: 5px 5px 10px brown;
 }
 
-.li {
+.navigation {
+    display: flex;
+    flex-direction: row;
     margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.navigation > li {
+    margin: 0 1rem;
+    overflow: hidden;
 }
 
 .links {
@@ -59,23 +56,13 @@ nav {
     text-decoration: underline double;
 }
 
-.navigation { /* ul */
-    margin: 0 1rem;
-    display: flex;
-    flex-direction: row;
-    gap: 1rem;
-}
-
-.navigation > .li {
-    overflow: hidden;
-}
-
 .hamburger-box {
+    height: 100%;
     width: 30px;
+    margin-left: 20px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-left: 20px;
     display: none;
 }
 
@@ -91,7 +78,8 @@ nav {
     height: 4px;
     width: 30px;
     border-radius: 2px;
-    background: white;
+    background-color: white;
+    transition: transform 0.5s cubic-bezier(0.23, 1, 0.320, 1);
 }
 
 .hamburger::before {
@@ -104,9 +92,24 @@ nav {
     margin-top: 8px;
 }
 
+#menu-toggle:checked + .hamburger-box .hamburger::before {
+    margin-top: 0;
+    transform: rotate(405deg);
+}
+
+#menu-toggle:checked + .hamburger-box .hamburger {
+    background-color: rgba(255, 255, 255, 0);
+}
+
+#menu-toggle:checked + .hamburger-box .hamburger::after {
+    margin-top: 0;
+    transform: rotate(-405deg);
+}
+
 @media (max-width: 700px) {
-    nav {
-        width: 85vw;
+    nav,
+    #menu-toggle:checked ~ .navigation li {
+        width: 80vw;
     }
     .hamburger-box {
         display: flex;
@@ -114,26 +117,26 @@ nav {
     .navigation {
         position: absolute;
         top: 6vmin;
-        margin-top: 50px;
+        margin-top: 67px;
         left: 0;
         flex-direction: column;
-        width: 85vw;
+        width: 100%;
         justify-content: center;
         align-items: center;
     }
-    #menu-toggle ~ .navigation .li {
+    #menu-toggle ~ .navigation li {
         height: 0;
         margin: 0;
         padding: 0;
         border: 0;
-        transition: height 400ms cubic-bezier(0.23, 1, 0.320, 1);
+        transition: height 0.5s cubic-bezier(0.23, 1, 0.320, 1);
     }
-    #menu-toggle:checked ~ .navigation .li {
+    #menu-toggle:checked ~ .navigation li {
         height: 1.5em;
-        border: 30px solid #333;
-        transition: height 400ms cubic-bezier(0.23, 1, 0.320, 1);
+        border: 1px solid white;
+        transition: height 0.5s cubic-bezier(0.23, 1, 0.320, 1);
     }
-    .navigation > .li {
+    .navigation > li {
         display: flex;
         justify-content: center;
         margin: 0;
@@ -142,8 +145,8 @@ nav {
         color: white;
         background-color: orange;
     }
-    .navigation > .li:not(:last-child) {
-        border-bottom: 1px solid #4444;
+    .navigation > li:not(:last-child) {
+        border-bottom: 1px solid white;
     }
     .text {
         font-size: 0.55rem;
